# naming

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/: make.bat
doc/source/: API Reference.rst  EasyName.rst  conf.py  index.rst
docs/: Makefile
docs/source/: API Reference.rst  Class List.rst  Classes.rst  File.rst  Name.rst  Overview.rst  Pipe.rst  PipeFile.rst  build_docs.py  conf.py  example.dot  index.rst  overview.dot  pyscript.toml  pyscript_config.toml
docs/source/test/: emHdBindings.worker.js  index.html
naming/: __init__.py  base.py  test.py
naming/model/: __init__.py  base.py  file.py  pipe.py
naming/tests/: __init__.py
