[metadata]
name = naming
version = 0.5.1
description = Object-oriented names for the digital era.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = name names naming convention configuration config cfg regex
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/chrizzFTD/naming
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:

[options.extras_require]
docs = sphinx_autodoc_typehints; sphinx_rtd_theme
