[metadata]
name = naming
version = 0.7.1
description = Object-oriented names for the digital era.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = name names naming convention configuration config cfg regex
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/chrizzFTD/naming
# Try to align to https://devguide.python.org/versions/
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:

[options.extras_require]
# docs dependencies install:
# conda install --channel conda-forge pygraphviz
# python -m pip install sphinx myst-parser sphinx-toggleprompt sphinx-copybutton sphinx-togglebutton sphinx-hoverxref sphinx_autodoc_typehints sphinx_rtd_theme
docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; sphinx_autodoc_typehints; sphinx_rtd_theme
